rubocop/examples/good/style_MethodCallParentheses.rb
# Omit parentheses for method calls with no arguments.

# good
Kernel.exit!
2.even?
fork
'test'.upcase
