rubocop/examples/bad/style_MethodCallParentheses.rb
# Omit parentheses for method calls with no arguments.

# bad
Kernel.exit!()
2.even?()
fork()
'test'.upcase()
